--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,29 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="nav">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <button ion-item (click)="onLoad(tabsPage)">
+        <ion-icon name="list-box" item-left></ion-icon>
+        Shopping List
+      </button>
+      <button ion-item (click)="onLoad(signupPage)">
+        <ion-icon name="person" item-left></ion-icon>
+        Signup
+      </button>
+      <button ion-item (click)="onLoad(signinPage)">
+        <ion-icon name="log-in" item-left></ion-icon>
+        Signin
+      </button>
+      <button ion-item (click)="onLogout()">
+        <ion-icon name="log-in" item-left></ion-icon>
+        Logout
+      </button>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+<ion-nav [root]="tabsPage" #nav></ion-nav>
